--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://31b0e355-b39d-48ee-9f39-78463961bad4.preview.emergentagent.com
 WDS_SOCKET_PORT=443
